--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13011,7 +13011,7 @@ ul.comment-list:has(>.th-comment-item~.th-comment-item):first-child>.th-post-com
     width: 100%;
     z-index: -1;
     content: "";
-    background: -webkit-linear-gradient(left, rgba(22, 22, 22, 0.8) 0%, rgba(22, 22, 22, 0) 100%);
+    background: -webkit-linear-gradient(left, rgba(22, 22, 22, 0.822) 0%, rgba(22, 22, 22, 0) 100%);
     background: linear-gradient(90deg, rgba(22, 22, 22, 0.8) 0%, rgba(22, 22, 22, 0) 100%)
 }
 
@@ -13035,33 +13035,62 @@ ul.comment-list:has(>.th-comment-item~.th-comment-item):first-child>.th-post-com
     padding-left: 100px
 }
 
+.hero-4 .slider-pagination.slider-pagination-bottom-right {
+    position: absolute;
+    bottom: 30px;
+    right: 30px;
+    top: auto;
+    transform: none;
+    flex-direction: row;
+    gap: 12px;
+    padding-left: 0;
+}
+
 .hero-4 .slider-pagination .slider-arrow.style-2 {
-    border: 2px solid var(--white-color)
+    border: 2px solid var(--white-color);
+    width: 48px;
+    height: 48px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.3s ease;
+}
+
+.hero-4 .slider-pagination .slider-arrow.style-2:hover {
+    background: #e32801;
+    border-color: #e32801;
 }
 
 .hero-4 .slider-pagination .slider-arrow.style-2 i {
-    color: var(--white-color)
+    color: var(--white-color);
+    font-size: 16px;
+    transition: all 0.3s ease;
 }
 
 .hero-style4 .hero4-sub-title {
-    font-size: 22px;
-    color: var(--white-color);
+    font-size: 16px;
+    color: #e32801;
     font-weight: 700;
-    margin-bottom: 55px;
+    margin-bottom: 25px;
     display: block;
-    font-family: var(--title-font)
+    font-family: var(--title-font);
+    letter-spacing: 1px;
+    text-transform: uppercase;
 }
 
 .hero-style4 .hero-title {
-    font-size: 68px;
-    line-height: .9;
-    margin-bottom: 40px
+    font-size: 80px;
+    line-height: 1.1;
+    margin-bottom: 40px;
+    color: #ffffff;
+    font-weight: 700;
 }
 
 .hero-style4 .hero-title .title2 {
-    font-size: 65px;
-    line-height: .9;
-    display: inline-block
+    font-size: 80px;
+    line-height: 1.1;
+    display: inline-block;
+    color: #e32801;
 }
 
 .reservation-area.style-2.home-4-style {
@@ -22434,7 +22463,7 @@ input {
 }
 
 .feature-list-1 .media-body {
-    border-bottom: 1px solid var(--th-border-color);
+    /* border-bottom: 1px solid var(--th-border-color); */
     padding-bottom: 20px;
     margin-bottom: 11px
 }
